2002-07-05  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome22): add start of gnome22 set (based on
	gnome20), which at the moment just has head glib, pango and gtk+.

	* module.py (ModuleSet.__init__): add optional "baseset" argument
	to constructor, based on idea by hp.

	* module.py (BuildScript.build): rest of jrb's patch.

	* jhbuild.py (do_build): add --start-at arg from patch by Jonathan
	Blandford <jrb@redhat.com> (from bug #87344)

	* moduleinfo.py (rhythmbox): rhythmbox module is called rhythmbox
	now.  Patch from hingwah@gnupilgrims.org (from bug #85905).
	(gnomeicu): Another patch from hingwah (from bug #85907).

	* jhbuid.py, module.py: apply patch to add makeargs setting
	contributed by C. Evans <ccevans@cox.net> (from bug #85228).

Wed Jun 19 14:02:05 2002  Jonathan Blandford  <jrb@redhat.com>

	* moduleinfo.py (head): update rhythmbox dependencies and module

2002-06-16  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add libxslt dependency to gtk-doc.
	(head): add sigc-1.1 dependency to gtkmm-1.3.

2002-06-09  James Henstridge  <james@daa.com.au>

	* moduleinfo.py: add extra modules, based on patch by Gediminas
	Paulauskas <menesis@delfi.lt>.

	* bootstrap.py (Bootstrap.build): add support for multiple patch
	files.
	(bootstraps): add a number of the patches from the libtool-1.4.2-9
	SRPM from Rawhide, so that we use a non sucky libtool.
	(Bootstrap.wants_package): allow people to install bootstrap
	packages they already have on their system.

2002-06-08  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add gtkmm-1.3 as a dependency for
	gnomemm/libgnomecanvasmm (bug fix by Hing-Wah Wan
	<hingwah@gnupilgrims.org>).

2002-06-03  James Henstridge  <james@daa.com.au>

	* README: add note about filing jhbuild bugs in bugzilla.

	* moduleinfo.py (head): fix up meta-gnome-c++ MetaModule def.

2002-06-01  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome2): add support for the gtk-- modules.