@@ -1,3 +1,8 @@
+2002-07-13  Xavier Ordoquy <MCArkan@gael.sourceforge.net>
+
+	* moduleinfo.py:
+	Added dia-newcanvas and gael2 to the gnome20 set.
+
 2002-07-05  James Henstridge  <james@daa.com.au>
 
 	* moduleinfo.py (gnome22): add start of gnome22 set (based on
